--- a/apps/buyinventory/view/buyinventory/list.html
+++ b/apps/buyinventory/view/buyinventory/list.html
@@ -64,7 +64,7 @@
 							<code>
 								<em>分类：</em><a
 									href="/buyinventory/{$cateId}_{$page}.html"
-									target="_blank" hidefocus="hidefocus">{$cate.cate_name}</a><em>作者：</em>好券vip<em>&nbsp;&nbsp;日期：</em>{$vo.gmtCreate}
+									target="_blank" hidefocus="hidefocus">{$cate.cate_name}</a><em>作者：</em>好券vip<em>&nbsp;&nbsp;日期：</em>{$vo.gmtCreate}  <em> 来源：</em>淘宝
 							</code>
 						</dt>
 					</dl>
