--- a/apps/tryout/view/articlecontroller/item.html
+++ b/apps/tryout/view/articlecontroller/item.html
@@ -37,6 +37,7 @@ var item={$item.item.tryItemId|urlIdcode=###,true};
 								target="_blank">&nbsp;&nbsp;&gt;&nbsp;&nbsp;<span
 								class="crumbs-item-title">{$cate.cate_name}</span></a>
 						</div>
+						<div class="come">来源:淘宝</div>
 
 					</div>
 					<div class="d-top-content">
