--- a/apps/tryout/view/articlecontroller/list.html
+++ b/apps/tryout/view/articlecontroller/list.html
@@ -69,7 +69,7 @@
 						<code>
 							<em>分类：</em><a
 								href="/try/{$cateId}_{$page}.html"
-								target="_blank" hidefocus="hidefocus">{$cate.cate_name}</a><em>作者：</em>好券vip<em>&nbsp;&nbsp;日期：</em>{$vo.data.submitTime/1000|date="Y-m-d",###}
+								target="_blank" hidefocus="hidefocus">{$cate.cate_name}</a><em>作者：</em>好券vip<em>&nbsp;&nbsp;日期：</em>{$vo.data.submitTime/1000|date="Y-m-d",###}<em> 来源：</em>淘宝
 						</code>
 					</dt>
 				</dl>
